# ci

./: .gitignore  AGENTS.md  ISSUES.md  PROJECT_OVERVIEW.md  README.md  SETUP_INSTRUCTIONS.md  architecture.md  pyproject.toml
.circleci/: config.yml
.popsicle/: test_dummy.yml
scripts/: dev_up.sh  format.sh  test.sh
src/fmg/api/: routes.py
src/fmg/cli/: main.py
src/fmg/common/: git.py
src/fmg/github/: status.py
src/fmg/orchestrator/: __init__.py
src/fmg/pipelines/: __init__.py
src/fmg/runner/: __init__.py
src/fmg/storage/: __init__.py  sqlite.py
src/fmg/webhook/: app.py
src/fmg/webui/: __init__.py  routes.py
src/fmg/webui/templates/: _empty_state.html  _flash.html  (+5 more)
src/popsicle/api/: routes.py
src/popsicle/cli/: main.py
src/popsicle/common/: formatting.py  git.py
src/popsicle/github/: __init__.py  status.py
src/popsicle/orchestrator/: __init__.py
src/popsicle/pipelines/: __init__.py  config_parser.py
src/popsicle/runner/: __init__.py
src/popsicle/storage/: sqlite.py
src/popsicle/webhook/: app.py
src/popsicle/webui/: __init__.py  routes.py
tests/unit/: test_health.py
tests/unit/api/: __init__.py  test_pipelines_api.py
tests/unit/cli/: test_main.py
tests/unit/github/: test_status_reporter.py
tests/unit/orchestrator/: test_pipeline_orchestrator.py
tests/unit/pipelines/: test_config_parser.py
tests/unit/runner/: test_docker_runner.py
tests/unit/storage/: test_sqlite_store.py
tests/unit/webhook/: test_webhook_push.py
tests/unit/webui/: conftest.py  test_pipeline_details.py  test_pipelines_list.py  test_projects.py
(+5 files in other folders)
